# xodus

./: .gitignore  Cargo.toml  README.md
docs/: README.md  device.md  licenses.md
tools/: systemdump.sh
xodus/: Cargo.toml
xodus-cli/: Cargo.toml
xodus-cli/src/: commands.rs  device.rs  license.rs  main.rs  user.rs  webview.rs
xodus-cli/src/commands/: download.rs  extract.rs  license.rs  login.rs
xodus/src/: api.rs  auth.rs  displaycatalog.rs  hardware.rs  lib.rs  licensing.rs  models.rs
xodus/src/api/: live.rs
xodus/src/api/live/: mod.rs  utils.rs
xodus/src/api/xbox/: mod.rs
xodus/src/clep/: challenge.rs
xodus/src/licensing/: content.rs  splicense.rs  utils.rs
xodus/src/models/: clep.rs  devicecredential.rs  displaycatalog.rs  licensing.rs  packagespc.rs  soap.rs
xodus/src/xvd/: crypt.rs  math.rs  utils.rs
