[package]
name = "xodus"
version = "0.1.0"
edition = "2024"

[dependencies]
xal = { git = "https://github.com/OpenXbox/xal-rs", rev = "230ba61c938f5376b226089ad5f1b812e809dafa", version = "0.1.3" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
quick-xml = { version = "0.38.3", features = ["serialize"] }
dotenv_codegen = "0.15.0"
async-trait = "0.1.89"
